--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 # aimojammi.github.io
+theme: jekyll-theme-minimal
+title: aimojammi homepage
+description: Bookmark this to keep an eye on my project updates!
